// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports authenticated 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mUser was authenticated[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID:     [1m100[22m:550e8400-e29b-41d4-a716-446655440000
        Subprotocol: [1m1.0.0[22m
        Client ID:   [1m1[22m

"
`;

exports[`reports authenticated without user ID 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mUser was authenticated[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID:     550e8400-e29b-41d4-a716-446655440000
        Subprotocol: [1m1.0.0[22m
        Client ID:   [1m1[22m

"
`;

exports[`reports bad authenticated 1`] = `
"[1m[33m[40m[7m WARN [27m[49m[39m[22m  [1m[33mBad authentication[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID:     [1m100[22m:550e8400-e29b-41d4-a716-446655440000
        Subprotocol: [1m1.0.0[22m
        Client ID:   [1m1[22m

"
`;

exports[`reports client error 1`] = `
"[1m[33m[40m[7m WARN [27m[49m[39m[22m  [1m[33mClient error: A timeout was reached (5000ms)[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID: [1m100[22m:550e8400-e29b-41d4-a716-446655440000

"
`;

exports[`reports connect 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mClient was connected[39m[22m [2mat 1970-01-01 00:00:00[22m
        Client ID:  [1m1[22m
        IP address: [1m127.0.0.1[22m

"
`;

exports[`reports destroy 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mShutting down Logux server[39m[22m [2mat 1970-01-01 00:00:00[22m

"
`;

exports[`reports disconnect 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mClient was disconnected[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID: [1m100[22m:550e8400-e29b-41d4-a716-446655440000

"
`;

exports[`reports disconnect from unauthenticated user 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mClient was disconnected[39m[22m [2mat 1970-01-01 00:00:00[22m
        Client ID: [1m1[22m

"
`;

exports[`reports error 1`] = `
"[1m[31m[40m[7m ERROR [27m[49m[39m[22m [1m[31mSome mistake[39m[22m [2mat 1970-01-01 00:00:00[22m
[33m        at Object.<anonymous> (test/server-reporter.test.js:28:13)[39m
[31m        at Module._compile (module.js:573:32)[39m
[31m        at at runTest (node_modules/jest/index.js:50:10)[39m
[31m        at process._tickCallback (internal/process/next_tick.js:103:7)[39m

"
`;

exports[`reports error from unautheficated user 1`] = `
"[1m[31m[40m[7m ERROR [27m[49m[39m[22m [1m[31mSyncError from client: A timeout was reached (5000ms)[39m[22m [2mat 1970-01-01 00:00:00[22m
        Client ID: [1m1[22m

"
`;

exports[`reports http 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mLogux server is listening[39m[22m [2mat 1970-01-01 00:00:00[22m
        Logux server: [1m0.1.1[22m
        PID:          [1m21384[22m
        Node ID:      [1mserver[22m:H1f8LAyzl
        Environment:  [1mdevelopment[22m
        Subprotocol:  [1m1.0.0[22m
        Supports:     [1m1.x[22m
        Listen:       [1mCustom HTTP server[22m
        [90mPress Ctrl-C to shutdown server[39m

"
`;

exports[`reports listen 1`] = `
"[1m[32m[40m[7m INFO [27m[49m[39m[22m  [1m[32mLogux server is listening[39m[22m [2mat 1970-01-01 00:00:00[22m
        Logux server: [1m0.1.1[22m
        PID:          [1m21384[22m
        Node ID:      [1mserver[22m:H1f8LAyzl
        Environment:  [1mdevelopment[22m
        Subprotocol:  [1m2.5.0[22m
        Supports:     [1m2.x || 1.x[22m
        Listen:       [1mws://127.0.0.1:1337[22m
        [90mPress Ctrl-C to shutdown server[39m

"
`;

exports[`reports production 1`] = `
" INFO   Logux server is listening at 1970-01-01 00:00:00
        Logux server: 0.1.1
        PID:          21384
        Node ID:      server:H1f8LAyzl
        Environment:  production
        Subprotocol:  1.0.0
        Supports:     1.x
        Listen:       wss://0.0.0.0:1337

"
`;

exports[`reports synchroniation error 1`] = `
"[1m[31m[40m[7m ERROR [27m[49m[39m[22m [1m[31mSyncError: A timeout was reached (5000ms)[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID: [1m100[22m:550e8400-e29b-41d4-a716-446655440000

"
`;
